--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head> 
 <body>
 
-    <a href="./index.html">
+    <a data-aos="fade-down" href="./index.html">
         <img class="logo__img-pokemon" src="./img/logo-pokemon.png" alt="">
     </a>
 
